Change ll to deque, moved denoms to config